# team_hoba_CAR_V1_1

./: tx2_ros_run.sh
devel/: .catkin  .rosinstall  setup.sh
devel/include/auto_car/: MsgControl.h
devel/lib/auto_car/: auto_car
devel/lib/pkgconfig/: auto_car.pc
devel/lib/python2.7/dist-packages/auto_car/msg/: _MsgControl.py  __init__.py
devel/share/auto_car/cmake/: auto_carConfig.cmake
devel/share/common-lisp/ros/auto_car/msg/: MsgControl.lisp  _package_MsgControl.lisp
devel/share/roseus/ros/auto_car/: manifest.l
devel/share/roseus/ros/auto_car/msg/: MsgControl.l
src/auto_car/: CMakeLists.txt
src/auto_car/include/: my_CV.h  my_ZED.h
src/auto_car/src/: main.cpp  my_CV.cpp  my_ZED.cpp
